--- a/app/templates/scientists.hbs
+++ b/app/templates/scientists.hbs
@@ -1,9 +1,8 @@
 {{page-title "Scientists"}}
-<h2>List of Scientists</h2>
 
-<ul>
-  {{#each @model as |scientist|}}
-    <li>{{scientist}}</li>
-  {{/each}}
-</ul>
+<PeopleList
+  @title="List of Scientists"
+  @people={{@model}}
+/>
+
 {{outlet}}
